# sen5x-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENCE-APACHE  LICENSE-MIT  README.md
.github/workflows/: sen5x-rs.yml
src/: commands.rs  errors.rs  lib.rs  sen5x.rs  types.rs
