[package]
name = "sen5x-rs"
version = "0.2.0"
edition = "2021"
authors = ["Sven Arends <sven@svena33.com>"]
license = "MIT OR Apache-2.0"
description = "embedded-hal driver for the sen5x environmental sensor node for HVAC and air quality applications."
documentation = "https://docs.rs/sen5x-rs"
repository = "https://github.com/svena33/sen5x-rs"
keywords = ["airquality", "sen5x", "pm25", "sensirion", "sensor"]
categories = ["embedded", "no-std"]

[dependencies]
embedded-hal = { version = "=1.0.0" }
sensirion-i2c = "0.3.0"

[dev-dependencies]
embedded-hal-mock = { version = "=0.10.0", features = ["eh1"] }
